analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/danglingAnnotationOnTopLevelProperty.kt
annotation class Ann

@Ann(value = {
    @Ann
    val <caret>localVal = 0
}